upload customization for katja

--- a/templates/knox/index-static-orig.html
+++ b/templates/knox/index-static-orig.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>KMFC</title>
+    <title>Knox - Static</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -50,7 +50,7 @@
         <header class="s-intro__header"> 
             <div class="s-intro__logo">
                 <a class="logo" href="index-static.html">
-                    <!-- <img src="images/logo.svg" alt="Homepage"> -->
+                    <img src="images/logo.png" alt="Homepage">
                 </a>
             </div>
         </header>  <!-- s-intro__header -->
@@ -165,7 +165,7 @@
             <div class="column">
 
                 <h1 class="text-huge-title text-center">
-                    Hi, We Are <br>KM Friederichs Coaching.
+                    Hi, We Are KM Friederichs Coaching.
                 </h1>
 
                 <nav class="tab-nav">
@@ -398,7 +398,7 @@
                 <!-- footer  -->
                 <footer>
                     <div class="ss-copyright">
-                        <span>© Copyright Knox 2021</span> 
+                        <span>© Copyright Affective Shifting Inc.</span> 
                         <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
                     </div>
                 </footer>
