--- a/templates/monica/about.html
+++ b/templates/monica/about.html
@@ -56,7 +56,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <h1 class="s-intro__content-title" style="font-size:clamp(2rem, 5vw, 5.6rem)">KM Friederichs Coaching</h1>
                         </a>
                     </div>
 
@@ -92,7 +92,7 @@
                         <div class="column xl-12">
                             <h1 class="page-title">
                                 <span class="page-title__small-type text-pretitle">About</span>
-                                Hi, I'm Monica
+                                Hi, I'm Katja
                             </h1>
                             
                         </div>
@@ -206,6 +206,60 @@
                             repellendus reprehenderit facere nihil quam. Saepe, magni.
                             </p>
 
+                            <h2 class="u-add-bottom">My Academic Work</h2>
+
+                            <div class="grid-list-items list-items">
+                                <div class="grid-list-items__item list-items__item u-remove-bottom">
+                                    <div class="list-items__item-header">
+                                        <h6 class="list-items__item-small-title">The Art of Getting Things Done</h6>
+                                    </div>
+                                    <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia accusamus consectetur adipisicing elit excepturi corrupti 
+                                    nam quae exercitationem cupiditate, provident ipsa delectus vero possimus reprehenderit quas ut officiis tempora voluptatum 
+                                    quibusdam consectetur commodi.</p>
+                                    <p><b>Google Scholar:</b> <a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=author%3A%22km+friederichs%22+author%3ABaumann+%22the+art+of+getting+things+done%22&btnG=">
+                                        The art of getting things done: Training affective shifting improves intention enactment</a>
+                                    </p>
+                                </div>
+                                <div class="grid-list-items__item list-items__item u-remove-bottom">
+                                    <div class="list-items__item-header">
+                                        <h6 class="list-items__item-small-title">When Tough Gets You Going</h6>
+                                    </div>
+                                    <p> 
+                                    Molestias, autem impedit culpa dolores excepturi, quidem unde ducimus, rerum commodi deserunt earum, minus voluptatum.
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe doloremque provident quas quae exercitationem laboriosam.
+                                    </p>
+                                    <p><b>Google Scholar:</b> <a href="https://scholar.google.com/scholar?as_q=%22when+tough+gets+you+going%22&as_epq=&as_oq=&as_eq=&as_occt=any&as_sauthors=%22km+friederichs%22&as_publication=personality&as_ylo=&as_yhi=&hl=en&as_sdt=0%2C5">
+                                        When tough gets you going: Action orientation unfolds with difficult intentions and can be fostered by mental contrasting</a>
+                                    </p>
+                                </div>
+                                <div class="grid-list-items__item list-items__item u-remove-bottom">
+                                    <div class="list-items__item-header">
+                                        <h6 class="list-items__item-small-title">The Importance of Empowering Self-Regulation</h6>
+                                    </div>
+                                    <p>
+                                    Mollitia accusamus consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisicing elit excepturi corrupti 
+                                    nam quae exercitationem cupiditate, provident ipsa delectus vero possimus reprehenderit quas ut officiis tempora voluptatum 
+                                    quibusdam consectetur commodi!
+                                    </p>
+                                    <p><b>Google Scholar:</b> <a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=author%3A%22km+friederichs%22+%22importance+of+empowering+self-regulation%22&btnG=">
+                                        The Importance of Empowering Self-Regulation</a>
+                                    </p>
+                                </div>
+                                <div class="grid-list-items__item list-items__item u-remove-bottom">
+                                    <div class="list-items__item-header">
+                                        <h6 class="list-items__item-small-title">The essence of authenticity</h6>
+                                    </div>
+                                    <p>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe doloremque provident quas quae exercitationem laboriosam. 
+                                    Molestias, autem? Impedit culpa dolores excepturi, quidem unde ducimus, rerum commodi deserunt earum, minus voluptatum?
+                                    </p>
+                                    <p><b>Google Scholar:</b> <a href="https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=author%3A%22km+friederichs%22+%22essence+of+authenticity%22&btnG=">
+                                        The essence of authenticity</a>
+                                    </p>
+                                </div>
+                                </div>
+                            </div> <!--grid-list-items -->
                         </div> <!-- end grid-block-->
                     </div> <!-- end pagemain -->
 
