--- a/templates/monica/index.html
+++ b/templates/monica/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Monica</title>
+    <title>KMFC</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -54,17 +54,12 @@
             <div class="row s-header__inner width-sixteen-col">
 
                 <div class="s-header__block">
-                    <div class="s-header__logo">
-                        <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
-                        </a>
-                    </div>
-
-                    <a class="s-header__menu-toggle" href="#0"><span>Menu</span></a>
+                    
+                     <a class="s-header__menu-toggle" href="#0"><span>Menu</span></a>
                 </div> <!-- end s-header__block -->
+                <h1 class="s-intro__content-title" style="font-size:clamp(2rem, 5vw, 5.6rem)">KM Friederichs Coaching</h1>
 
                 <nav class="s-header__nav">
-    
                     <ul class="s-header__menu-links">
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
@@ -96,18 +91,17 @@
                     <div class="column lg-12 s-intro__content-inner grid-block">
                         
                         <div class="s-intro__content-text">
-                            <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Monica</div>
+                            <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Katja</div>
                             <h1 class="s-intro__content-title">
-                            I create marketing <br>
-                            strategies for your <br>
-                            business that get <br>
-                            results.
+                            I empower leadership  <br>
+                            to help you master <br>
+                            the art of getting things done.
                             </h1>
                         </div> <!-- s-intro__content-text -->
 
                         <div class="s-intro__content-media"> 
                             <div class="s-intro__content-media-inner">                               
-                                <img src="images/intro-bg.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg@2x.jpg 2x" alt="">
+                                <img src="images/katja-head.jpg" srcset="images/katja-head.jpg 1x, images/katja-head@2x.jpg 2x" alt="">
                                 <div class="lines">                               
                                     <span></span>                                  
                                 </div>
@@ -141,7 +135,7 @@
                         <div class="section-header grid-section-split__header">
                             <div class="text-pretitle">About</div>                           
                             <h2 class="text-display-title">
-                            An inspiring headline about yourself.
+                            State-of-the-Art Psychology and Coaching strategies for achieving excellence. 
                             </h2>                           
                         </div> <!-- end section-header -->
 
@@ -569,7 +563,7 @@
         <footer class="s-footer">
             <div class="row s-footer__content">
                 <div class="column xl-6 lg-6 md-12 s-footer__block s-footer__about">                    
-                    <h3>About Monica</h3>
+                    <h3>About Katja</h3>
                     <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas illum quasi facere libero, 
                     fugiat laboriosam possimus reprehenderit eveniet vero voluptatum fugit ad quis veritatis suscipit beatae 
@@ -637,7 +631,7 @@
                 </div>
                 <div class="column xl-6 lg-12">
                     <p class="ss-copyright">
-                        <span>© Copyright Monica 2022</span> 
+                        <span>© Copyright Katja 2022</span> 
                         <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
                     </p>
                 </div>
