--- a/templates/monica/contact.html
+++ b/templates/monica/contact.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact - Monica</title>
+    <title>Contact - Katja</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -174,7 +174,7 @@
 
                                     <div class="contact-block">
                                         <h6>Email</h6>
-                                        <a href="mailto:#0">hello@monica.com</a>
+                                        <a href="mailto:#0">katja.milena.friederichs@gmail.com</a>
                                     </div>
 
                                     <div class="contact-block">
