final edits for delivery

--- a/templates/knox/index-static.html
+++ b/templates/knox/index-static.html
@@ -59,13 +59,13 @@
             <div class="column">
 
                 <div class="text-pretitle">
-                    Nice to meet you.
+                    Welcome to
                 </div>
 
                 <h1 class="text-huge-title">
-                We are preparing <br>
-                something exciting <br>
-                & amazing for you.
+                KM <br>
+                Friederichs<br>
+                Coaching.
                 </h1>
 
                 <div class="s-intro__content-bottom">
